Fixed double-scrollbar issue

--- a/css/sidebars.css
+++ b/css/sidebars.css
@@ -10,9 +10,9 @@ html {
 main {
   display: flex;
   flex-wrap: nowrap;
-  height: 100vh;
+  /*height: 100vh;*/
   height: -webkit-fill-available;
-  max-height: 100vh;
+  /*max-height: 100vh;*/
   overflow-x: auto;
   overflow-y: auto;
 }
@@ -90,5 +90,5 @@ main {
 .lh-tight { line-height: 1.25; }
 
 .list-unstyled > li {
-  padding-left: 6px !important;
+  padding-left: 6px;
 }
